test/files/neg/t6276.check
t6276.scala:4: error: method a does nothing other than call itself recursively
      def a: Any = a // warn
                   ^
t6276.scala:5: error: value b does nothing other than call itself recursively
      val b: Any = b // warn
                   ^
t6276.scala:10: error: method a does nothing other than call itself recursively
      def a: Any = a // warn
                   ^
t6276.scala:19: error: method a does nothing other than call itself recursively
      def a = a // warn
              ^
four errors found
